init jkd11 arm.