@@ -1,6 +1,6 @@
-## CentOS 7 with AEM
+## Debian with AEM
 
-[![build_status](https://github.com/aem-design/docker-aem/workflows/build/badge.svg?branch=6.5.3.0)](https://github.com/aem-design/docker-aem/actions?query=workflow%3Abuild+branch%3A6.5.3.0)
+[![build_status](https://github.com/aem-design/docker-aem/workflows/build/badge.svg?branch=6.5.10.0-jdk11-arm)](https://github.com/aem-design/docker-aem/actions?query=workflow%3Abuild+branch%3A6.5.10.0-jdk11-arm)
 [![github license](https://img.shields.io/github/license/aem-design/aem)](https://github.com/aem-design/aem) 
 [![github issues](https://img.shields.io/github/issues/aem-design/aem)](https://github.com/aem-design/aem) 
 [![github last commit](https://img.shields.io/github/last-commit/aem-design/aem)](https://github.com/aem-design/aem) 
@@ -9,13 +9,13 @@
 [![docker pulls](https://img.shields.io/docker/pulls/aemdesign/aem)](https://hub.docker.com/r/aemdesign/aem) 
 [![github release](https://img.shields.io/github/release/aem-design/aem)](https://github.com/aem-design/aem)
 
-This is docker image based on CentOS 7 with Tini
+This is docker image based on [Debian with Tini](https://github.com/aem-design/docker-tini/tree/debian-arm)
 One image that can be used for both Author and Publish nodes
 No license is included, you will need to register when starting up
 
 ### AEM Version
 
-Folling base version of AEM jar used for this image, additional packages installed in separate branches.
+Following base version of AEM jar used for this image, additional packages installed in separate branches.
 
 Version: 6.5.0 GA
 
@@ -65,138 +65,19 @@ Following Ports are exposed
 | 57345 | debug |
 | 57346 | debug |
 
-
-### Packages in Bundled Version `aemdesign/aem:6.5.2.0-bundle`
-
-Following bundles are added to container
-
-| File | Notes  |
-| ---  | ---    |
-| AEM-6.5.2.0-6.5.2.zip | sp 2 |
-| com.adobe.acs.bundles.twitter4j-content-1.0.0.zip | acs twitter |
-| acs-aem-commons-content-4.3.2.zip | acs commons |
-| core.wcm.components.all-2.6.0.zip | adobe corecomponents |
-| accesscontroltool-package-2.3.2.zip | netcentric acl tools |
-| accesscontroltool-oakindex-package-2.3.2.zip | netcentric acl tools |
-| vanityurls-components-1.0.2.zip | vanity url servlet |
-| aemdesign-aem-core-deploy-<LATEST>.zip | aem design core |
-| aemdesign-aem-support-deploy-<LATEST>.zip | aem design showcase content |
-| brightcove_connector.ui.apps-5.5.0.zip | bright code connector |
-
-
-### Packages in Bundled Version `aemdesign/aem:6.5.2.0-forms`
+### Packages Container
 
 Following bundles are added to container
 
-| File | Notes  |
-| ---  | ---    |
-| AEM-6.5.2.0-6.5.2.zip | sp 2 |
-| AEM-Forms-6.5.1.0-LX-6.0.108.zip | aem forms |
-| AEM-FORMS-6.5.2.0-COMPAT-2.0.22.zip | aem forms backwards compatibility |
-| com.adobe.acs.bundles.twitter4j-content-1.0.0.zip | acs twitter |
-| acs-aem-commons-content-4.3.2.zip | acs commons |
-| core.wcm.components.all-2.6.0.zip | adobe corecomponents |
-| accesscontroltool-package-2.3.2.zip | netcentric acl tools |
-| accesscontroltool-oakindex-package-2.3.2.zip | netcentric acl tools |
-| vanityurls-components-1.0.2.zip | vanity url servlet |
-| aemdesign-aem-core-deploy-<LATEST>.zip | aem design core |
-| aemdesign-aem-support-deploy-<LATEST>.zip | aem design showcase content |
-
-### Packages in Bundled Version `aemdesign/aem:6.5.0-bundle`
-
-Following bundles are added to container
-
-| File | Notes  |
-| ---  | ---    |
-| AEM-6.5.1.0-6.5.1.zip | sp 1 |
-| AEM-Forms-6.5.1.0-LX-6.0.88.zip | aem forms |
-| aem-compat-cq65-to-cq64-0.18.zip | aem forms backwards compatibility |
-| com.adobe.acs.bundles.twitter4j-content-1.0.0.zip | acs twitter |
-| acs-aem-commons-content-4.3.2.zip | acs commons |
-| core.wcm.components.all-2.6.0.zip | adobe corecomponents |
-| accesscontroltool-package-2.3.2.zip | netcentric acl tools |
-| accesscontroltool-oakindex-package-2.3.2.zip | netcentric acl tools |
-| vanityurls-components-1.0.2.zip | vanity url servlet |
-| aemdesign-aem-core-deploy-<LATEST>.zip | aem design core |
-| aemdesign-aem-support-deploy-<LATEST>.zip | aem design showcase content |
-
-
-### Packages in Bundled Version `aemdesign/aem:6.4.0-bundle`
-
-Following bundles are added to container
-
-| File | Notes  |
-| ---  | ---    |
-| AEM-6.4.4.0-6.4.4.zip | sp 4 |
-| AEM-Forms-6.4.4.0-LX-5.1.58.zip | aem forms |
-| AEM-FORMS-6.4-COMPAT-1.0.18.zip | aem forms backwards compatibility |
-| com.adobe.acs.bundles.twitter4j-content-1.0.0.zip | acs twitter |
-| acs-aem-commons-content-4.3.2.zip | acs commons |
-| core.wcm.components.all-2.6.0.zip | adobe corecomponents |
-| accesscontroltool-package-2.3.2.zip | netcentric acl tools |
-| accesscontroltool-oakindex-package-2.3.2.zip | netcentric acl tools |
-| vanityurls-components-1.0.2.zip | vanity url servlet |
-| aemdesign-aem-core-deploy-<LATEST>.zip | aem design core |
-| aemdesign-aem-support-deploy-<LATEST>.zip | aem design showcase content |
+| File                    | Notes                       |
+|-------------------------|-----------------------------|
+| AEM-6.5.10.0-6.5.10.zip | sp 10                       |
 
 
 ### Starting
 
-To start local demo AEM 6.5 instance on port 4502
+To start local instance
 
 ```bash
-docker run --name author \
--e "AEM_RUNMODE=-Dsling.run.modes=author,crx3,crx3tar,dev" \
--p4502:8080 -d \
--p30303:58242 -d \
-aemdesign/aem:6.5.2.0
+docker run --name author655 -e "TZ=Australia/Sydney" -e "AEM_RUNMODE=-Dsling.run.modes=author,crx3,crx3tar,forms,localdev" -e "AEM_JVM_OPTS=-server -Xms248m -Xmx1524m -XX:MaxDirectMemorySize=256M -XX:+CMSClassUnloadingEnabled -Djava.awt.headless=true -Dorg.apache.felix.http.host=0.0.0.0 -Xdebug -Xrunjdwp:transport=dt_socket,server=y,address=58242,suspend=n -XX:+UseParallelGC --add-opens=java.desktop/com.sun.imageio.plugins.jpeg=ALL-UNNAMED --add-opens=java.base/sun.net.www.protocol.jrt=ALL-UNNAMED --add-opens=java.naming/javax.naming.spi=ALL-UNNAMED --add-opens=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED -Dnashorn.args=--no-deprecation-warning" -p4502:8080 -p30303:58242 -d aemdesign/aem:6.5.10.0-jdk11
 ``` 
-
-To start local demo AEM 6.4 instance on port 4512
-
-```bash
-docker run --name author64 \
--e "AEM_RUNMODE=-Dsling.run.modes=author,crx3,crx3tar,dev" \
--p4512:8080 -d \
--p30313:58242 -d \
-aemdesign/aem:6.4.0
-``` 
-
-To start local demo AEM 6.5 instance on port 4565 with Bundled Packages run the following
-
-```bash
-docker run --name author65bundle \
--e "TZ=Australia/Sydney" \
--e "AEM_RUNMODE=-Dsling.run.modes=author,crx3,crx3tar,dev" \
--e "AEM_JVM_OPTS=-server -Xms248m -Xmx1524m -XX:MaxDirectMemorySize=256M -XX:+CMSClassUnloadingEnabled -Djava.awt.headless=true -Dorg.apache.felix.http.host=0.0.0.0 -Xdebug -Xrunjdwp:transport=dt_socket,server=y,address=58242,suspend=n" \
--p4565:8080 -d \
--p30364:58242 -d \
-aemdesign/aem:6.5.2.0-bundle
-``` 
-
-
-To start local demo AEM 6.5 instance on port 4565 with Bundled Forms run the following
-
-```bash
-docker run --name author65bundleforms \
--e "TZ=Australia/Sydney" \
--e "AEM_RUNMODE=-Dsling.run.modes=author,crx3,crx3tar,dev" \
--e "AEM_JVM_OPTS=-server -Xms248m -Xmx1524m -XX:MaxDirectMemorySize=256M -XX:+CMSClassUnloadingEnabled -Djava.awt.headless=true -Dorg.apache.felix.http.host=0.0.0.0 -Xdebug -Xrunjdwp:transport=dt_socket,server=y,address=58242,suspend=n" \
--p4565:8080 -d \
--p30364:58242 -d \
-aemdesign/aem:6.5.2.0-forms
-``` 
-
-To start local demo AEM 6.4 instance on port 4564 with Bundled Packages run the following
-
-```bash
-docker run --name author64bundle \
--e "TZ=Australia/Sydney" \
--e "AEM_RUNMODE=-Dsling.run.modes=author,crx3,crx3tar,dev" \
--e "AEM_JVM_OPTS=-server -Xms248m -Xmx1524m -XX:MaxDirectMemorySize=256M -XX:+CMSClassUnloadingEnabled -Djava.awt.headless=true -Dorg.apache.felix.http.host=0.0.0.0 -Xdebug -Xrunjdwp:transport=dt_socket,server=y,address=58242,suspend=n" \
--p4564:8080 -d \
--p30364:58242 -d \
-aemdesign/aem:6.4.0-bundle
-``` 
-
-
